# LinuxAudio

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  main_alsa.cpp  main_pw.cpp  main_vlc.cpp
cmake/: FindLIBVLC.cmake  FindLibVLCpp.cmake  FindPulseAudio.cmake
